LegUp/214_benchmarks/extr_.Craftsrccube.c_make_cube_faces_with_main/log.txt
# annotate loop labels
../../../mark_labels.pl extr_.Craftsrccube.c_make_cube_faces_with_main.c > extr_.Craftsrccube.c_make_cube_faces_with_main_labeled.c
# produces pre-link time optimization binary bitcode: extr_.Craftsrccube.c_make_cube_faces_with_main.prelto.bc
clang extr_.Craftsrccube.c_make_cube_faces_with_main_labeled.c -emit-llvm -c -fno-builtin -m32 -I ../../../lib/include/ -I /usr/include/i386-linux-gnu -O3 -o extr_.Craftsrccube.c_make_cube_faces_with_main.prelto.1.bc
extr_.Craftsrccube.c_make_cube_faces_with_main_labeled.c:92:11: error: expected identifier or '('
  float (*)[4] ao;
          ^
extr_.Craftsrccube.c_make_cube_faces_with_main_labeled.c:93:11: error: expected identifier or '('
  float (*)[4] light;
          ^
extr_.Craftsrccube.c_make_cube_faces_with_main_labeled.c:110:25: error: use of undeclared identifier 'ao'
  make_cube_faces(data, ao, light, left, right, top, bottom, front, back, wleft, wright, wtop, wbottom, wfront, wback, x, y, z, n);
                        ^
3 errors generated.
make: *** [all] Error 1
